Closed
Bug 1268475
Opened 9 years ago
Closed 9 years ago
[Elevated Update] After 3 cancelations, Nightly doesn't start
Categories
(Toolkit :: Application Update, defect)
Tracking
()
VERIFIED
FIXED
People
(Reporter: Ovidiu, Assigned: spohl)
References
Details
Attachments
(1 file)
2.65 KB,
patch
|
mstange
:
review+
|
Details | Diff | Splinter Review |
[Affected versions]:
Nightly Oak build
[Affected platforms]:
Mac OS X 10.11
Mac OS X 10.10
[Steps to reproduce]:
1. To a admin user install Firefox Nightly, you can use this link: http://archive.mozilla.org/pub/firefox/nightly/2016/04/2016-04-19-10-56-54-oak/firefox-48.0a1.en-US.mac.dmg
2. Switch to a user account
3. Update Firefox
4. When the OSX prompts for elevation and installation of a "privileged helper tool" click "Cancel"
5. Repeat 3 times steps 3 and 4
[Expected result]:
Nightly should start.
[Actual result]:
After 3 cancelation, Nightly doesn't start.
[Additional notes]:
I also checked in Activity Monitor for Nightly process but nothing appears, and when I want to reopen it 2 Nightly processes start.
Assignee | ||
Comment 1•9 years ago
|
||
(In reply to ovidiu boca[:Ovidiu] from comment #0)
> [Actual result]:
>
> After 3 cancelation, Nightly doesn't start.
Are you saying that when you cancel the elevation prompt, it pops back up and Nightly doesn't start in between?
Flags: needinfo?(ovidiu.boca)
![]() |
Reporter | |
Comment 2•9 years ago
|
||
It is a big lengthy, but you can notice that after the 2nd cancel( sometimes it needs 3) to the authentication, Nightly will not start.
After I restart Nightly manually, the system log will list that it might be another Nightly opened, which is not the case and two Nightly will be opened.
Also I made a screen recorder of the issue, please use this link:
https://www.dropbox.com/s/8ots4ffumgpsawr/Recording%20%232.mp4?dl=0
Note: I have tested this issue with a new profile and the results are the same.
Flags: needinfo?(ovidiu.boca)
Assignee | ||
Comment 3•9 years ago
|
||
Hi Ovidiu, I believe what might be going on here is that you're going through the steps really quickly. I believe that when you cancel the elevation dialog very quickly, the unelevated update process may still be in the process of registering as an IPC server. When the elevation dialog is canceled, the elevated update process is supposed to notify the unelevated update process, and the unelevated update process will quit and Firefox can restart. The unelevated update process may not be able to be notified yet.
Could you verify this theory by:
1. Going through the steps again, but wait several seconds before canceling the elevation dialog. Confirm that issue doesn't reproduce.
2. Going through the steps again, with the same speed as in the video. Once you get to the point where the update dialog is canceled and Firefox isn't started, please open Activity Monitor and check whether or not a process called org.mozilla.updater and Nightly is running.
If we can confirm this theory I will look into ways to avoid this situation. Thanks!
![]() |
Reporter | |
Comment 4•9 years ago
|
||
Hi Stephen,
1. I run again the test and wait several seconds and the result is that after 3 cancelations a new download starts.
2. I retest with the same speed as in the video and in Activity Monitor I found org.mozilla.updater process running.
Assignee | ||
Comment 5•9 years ago
|
||
Assignee: nobody → spohl.mozilla.bugs
Status: NEW → ASSIGNED
Attachment #8748377 -
Flags: review?(mstange)
Updated•9 years ago
|
Attachment #8748377 -
Flags: review?(mstange) → review+
Assignee | ||
Comment 6•9 years ago
|
||
https://hg.mozilla.org/projects/oak/rev/49ffaf5f3c29ea098c1ff7e3fcf63dcc648727b3
Bug 1268475: Allow elevated updater on OSX to make 10 IPC connection attempts to obtain updater arguments. r=mstange
Assignee | ||
Comment 7•9 years ago
|
||
Hi Ovidiu, if you could retest this bug on Oak, that would be great. Direct link to build with fix:
http://archive.mozilla.org/pub/firefox/nightly/2016/05/2016-05-05-04-02-06-oak/firefox-49.0a1.en-US.mac.dmg
Note that you will not be able to perform two consecutive updates with this build, since it is more recent than the one that is currently staged on people.mozilla.org (the override URL). Two consecutive updates shouldn't be necessary to verify the fix. Thanks!
Flags: needinfo?(ovidiu.boca)
![]() |
Reporter | |
Comment 8•9 years ago
|
||
Hi Stephen, I followed the steps from description and used the link that you provided in comment7 but with no success, the build can't be updated and I'm not prompted with the elevated window. In about:nightly "Updates available at: https://nightly.mozilla.org/" is displayed.
Flags: needinfo?(ovidiu.boca)
Assignee | ||
Comment 9•9 years ago
|
||
Hi Ovidiu, if you see the message that updates are available at https://nightly.mozilla.org/, it usually means that either another update window is open or something else conflicts with checking for updates. Could you please verify the state of the system, create a new profile and verify that no other update dialog is open?
I just verified this locally, and the build from comment 7 successfully updates to the latest build on Oak.
Assignee | ||
Updated•9 years ago
|
Flags: needinfo?(ovidiu.boca)
![]() |
Reporter | |
Comment 10•9 years ago
|
||
Hi Stephen,
I was able to update to the last build on Oak only from admin to the same admin. I tried to install on admin and switched to standard user and the update is not working I have the same results like in comment 8.
Flags: needinfo?(ovidiu.boca)
Assignee | ||
Comment 11•9 years ago
|
||
Could you create a new standard user account and try again? There appears to still be a conflict that is unrelated to the patches that we're trying to test here. Thanks!
Flags: needinfo?(ovidiu.boca)
![]() |
Reporter | |
Comment 12•9 years ago
|
||
I will clean the need info request based on the fact that I talk with Stephen on IRC about this issue.
Flags: needinfo?(ovidiu.boca)
Assignee | ||
Comment 13•9 years ago
|
||
https://hg.mozilla.org/projects/oak/rev/4b7858d4f81701256b9516325b5eb7e7f36750eb
Bug 1268475: Allow elevated updater on OSX to make 10 IPC connection attempts to obtain updater arguments. r=mstange
Assignee | ||
Comment 14•9 years ago
|
||
https://hg.mozilla.org/projects/oak/rev/007fbe0337935553935559bc57650eece290686a
Bug 1268475: Allow elevated updater on OSX to make 10 IPC connection attempts to obtain updater arguments. r=mstange
Assignee | ||
Comment 15•9 years ago
|
||
Hi Ovidiu, you should be able to retest the fix with this Oak build:
http://archive.mozilla.org/pub/firefox/nightly/2016/05/2016-05-13-20-52-10-oak/firefox-49.0a1.en-US.mac.dmg
Thanks!
Flags: needinfo?(ovidiu.boca)
![]() |
Reporter | |
Comment 16•9 years ago
|
||
Hi Stephen, I was able to test this issue with the new build that you provided, and I couldn't reproduce the issue.
Flags: needinfo?(ovidiu.boca)
Assignee | ||
Comment 17•9 years ago
|
||
Perfect, thank you!
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
![]() |
Reporter | |
Comment 18•9 years ago
|
||
Hi Stephen,
Please confirm us what is the expected result when you cancel 5 times the elevation? From your PDF files that you send us when we started to work on this feature, the expected result for this scenario is to stop notifying the user of this version of the update. Actual result is that nothing happens after 5 cancellations. Please tell us if you consider that we should filed a new bug for this?
Flags: needinfo?(spohl.mozilla.bugs)
Assignee | ||
Comment 19•9 years ago
|
||
(In reply to ovidiu boca[:Ovidiu] from comment #18)
> Hi Stephen,
>
> Please confirm us what is the expected result when you cancel 5 times the
> elevation? From your PDF files that you send us when we started to work on
> this feature, the expected result for this scenario is to stop notifying the
> user of this version of the update. Actual result is that nothing happens
> after 5 cancellations. Please tell us if you consider that we should filed a
> new bug for this?
Can you clarify what you mean by "nothing happens after 5 cancellations"? Do you mean that you are still being notified of the update?
Note that you will always be able to check for updates from the About dialog. However, if you have been notified three times of the update, and you've canceled elevation 3 times, you will no longer see the dialog that is triggered *by a timer*. You can accelerate the automated check and display of the dialog by setting the following prefs:
app.update.timerMinimumDelay: 2
app.update.promptWaitTime: 5
app.update.interval: 5
app.update.idletime: 5
If your issue still reproduces, please open a new bug with steps and all the prefs that you've set. Thanks!
Flags: needinfo?(spohl.mozilla.bugs) → needinfo?(ovidiu.boca)
![]() |
Reporter | |
Comment 20•9 years ago
|
||
Hi Stephen, for testing the issue with 5 cancelation I used the build from comment 7 but it doesn't work. The scenario that I want to use, is the same with the one from description but instead of 3 cancellation I will try 5 cancellation. Can you please tell me what build should I use for testing this?
Thanks.
Flags: needinfo?(ovidiu.boca) → needinfo?(spohl.mozilla.bugs)
Assignee | ||
Comment 21•9 years ago
|
||
Sure, please retest with this build:
http://archive.mozilla.org/pub/firefox/nightly/2016/05/2016-05-17-04-02-09-oak/firefox-49.0a1.en-US.mac.dmg
Thanks!
Flags: needinfo?(spohl.mozilla.bugs) → needinfo?(ovidiu.boca)
Assignee | ||
Comment 22•9 years ago
|
||
Actually, please retest with this build:
http://archive.mozilla.org/pub/firefox/nightly/2016/05/2016-05-18-18-25-21-oak/firefox-49.0a1.en-US.mac.dmg
Note that it is after 3 cancelations that you will no longer be prompted for the update. If there is a document out there that still refers to 5 cancelations, please let me know so I can update it to 3.
I just verified this myself. Here is what I did:
1. Set prefs given in comment 19.
2. Open Firefox
3. Wait for update to be downloaded
4. Update dialog appears, click "Restart Now".
5. Cancel elevation.
6. Firefox reopens, dismiss update failure dialog.
7. Close Firefox.
8. Restart Firefox.
9. Repeat steps 4 - 8 three more times.
10. After the third repetition, no update dialog appears anymore.
![]() |
Reporter | |
Comment 23•9 years ago
|
||
Hi Stephen, with the build and instructions from comment 22, Firefox works as expected. Thanks
Flags: needinfo?(ovidiu.boca)
![]() |
Reporter | |
Updated•9 years ago
|
Status: RESOLVED → VERIFIED
You need to log in
before you can comment on or make changes to this bug.
Description
•