Bug 1268475: Allow elevated updater on OSX to make 10 IPC connection attempts to obtain updater arguments. r=mstange